// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Card> Background 1`] = `
.emotion-0 {
  width: 100%;
  height: 100%;
  background: white;
  color: dimgray;
  background: red;
}

.emotion-1 {
  height: 100%;
  position: relative;
  border-radius: inherit;
  overflow: hidden;
}

<div>
  <div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div>
        good
      </div>
    </div>
  </div>
</div>
`;

exports[`<Card> bordered  1`] = `
.emotion-0 {
  width: 100%;
  height: 100%;
  background: white;
  color: dimgray;
  border-radius: 10px;
  background: #f5f5f5;
}

.emotion-1 {
  height: 100%;
  position: relative;
  border-radius: inherit;
  overflow: hidden;
}

<div>
  <div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    />
  </div>
</div>
`;

exports[`<Card> css Object style 1`] = `
.emotion-0 {
  width: 100%;
  height: 100%;
  background: white;
  color: dimgray;
  background: #f5f5f5;
  width: 300px;
  background: red;
}

.emotion-0:hover {
  background: blue;
}

.emotion-1 {
  height: 100%;
  position: relative;
  border-radius: inherit;
  overflow: hidden;
}

<div>
  <div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    />
  </div>
</div>
`;

exports[`<Card> empty snapshot 1`] = `
.emotion-0 {
  width: 100%;
  height: 100%;
  background: white;
  color: dimgray;
  background: #f5f5f5;
}

.emotion-1 {
  height: 100%;
  position: relative;
  border-radius: inherit;
  overflow: hidden;
}

<div>
  <div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    />
  </div>
</div>
`;

exports[`<Card> outlined  1`] = `
.emotion-0 {
  width: 100%;
  height: 100%;
  background: white;
  color: dimgray;
  border: 1px solid #00000010;
  background: #f5f5f5;
}

.emotion-1 {
  height: 100%;
  position: relative;
  border-radius: inherit;
  overflow: hidden;
}

<div>
  <div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    />
  </div>
</div>
`;

exports[`<Card> outlined && bordered 1`] = `
.emotion-0 {
  width: 100%;
  height: 100%;
  background: white;
  color: dimgray;
  border: 1px solid #00000010;
  border-radius: 10px;
  background: #f5f5f5;
}

.emotion-1 {
  height: 100%;
  position: relative;
  border-radius: inherit;
  overflow: hidden;
}

<div>
  <div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    />
  </div>
</div>
`;
